[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/enemies/bisht_jam_enemy_temp (2).png" type="Texture" id=1]
[ext_resource path="res://enemy.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[node name="enemy" type="KinematicBody2D" groups=["Enemies"]]
collision_layer = 4
collision_mask = 7
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -4.17233e-07, 0 )
scale = Vector2( 0.5, 0.5 )

[node name="stunned_timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="timeout" from="stunned_timer" to="." method="_on_stunned_timer_timeout"]
